Fix link colors and layout on makerspace page

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -26,61 +26,13 @@ order: 3
   <div class="makerspace__ethos">
     <div class="banner" style="border: 5px solid #00FFFF; padding: 20px;">
       <h2>New Location!</h2>
-      <p>Until the <a href="https://www.library.virginia.edu/renovation">main library is renovated</a>, the Scholars' Lab and the TinkerTank (formerly Makerspace) have moved next door to Clemons Library, 3rd Floor, in the Robertson Media Center.</p>
+      <p>Until the <a href="https://www.library.virginia.edu/renovation">main library is renovated</a>, the Scholars&rsquo; Lab and the TinkerTank (formerly Makerspace) have moved next door to Clemons Library, 3rd Floor, in the Robertson Media Center.</p>
       <h2>Newsletter!</h2>
       <p>Subscribe to the monthly <a href="http://eepurl.com/hXIWCb">TinkerTank newsletter</a>!</p>
-    </div>
-    <div class="maker-ethos__title">Vision</div>
-    <div class="maker-ethos__text">
-      <p>The Scholars’ Lab TinkerTank is strategically situated within the UVA
-        Library to be open, provide a low barrier of entry to making, and be a helpful
-        resource of information, technology and support. The space invites all
-        people, and proactively encourages those in underrepresented academic
-        studies, ethnicities, genders, economic classes and skill levels to come,
-        learn, make, and be empowered to improve their education, research, and
-        community. The TinkerTank is an active participant in academic research
-        through independent and collaborative work with scholars to explore,
-        understand, and report on emerging technologies, methodologies and
-        pedagogies in a variety of disciplines.
-      </p>
-
-    </div>
-    <div class="maker-ethos__title">Mission</div>
-    <div class="maker-ethos__text">
-      <p>All humans are dreamers, creators, and achievers. Our mission is to
-        provide the place, the tools, and the support to empower people to dream,
-        create, and achieve.</p>
     </div>
   </div>
 
   <div class="makerspace__hours">
-    <!-- Please note: The following styles are optional, feel free to modify! //-->
-    <style>
-      .s-lc-whw-sublocname {visibility: hidden;}
-      .s-lc-whw thead { background-color: #F5F5F5; }
-      .s-lc-whw-head-date { color: #5F5F5F; }
-      .s-lc-whw-today-h {  background-color: #ddd; }
-      .s-lc-whw-today { background-color: #F5F5F5; }
-      .s-lc-whw-bh { text-align: right; white-space: nowrap; }
-      .s-lc-whw-locname { font-weight: bold;}
-      .s-lc-whw-sublocname{ padding-left: 10px!important; }
-      .s-lc-whw-footnote { color: #555; font-size: 80%; }
-      .s-lc-whw-footnote td:hover { background-color:#fff!important;}
-      /* Below styles can be removed if you are already using Bootstap v3 in host page */
-      .s-lc-whw-cont {font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; font-size: 12px;}
-      .s-lc-whw-pr, .s-lc-whw-ne{ padding: 5px 10px; font-size: 12px; line-height: 1.5; border-radius: 3px; color: #333; background-color: #fff; border-color: #ccc; display: inline-block; margin-bottom: 0; font-weight: 400; text-align: center; vertical-align: middle; cursor: pointer; background-image: none; border: 1px solid transparent; white-space: nowrap; }
-      .s-lc-whw-pr:disabled { background-color: #efefef; }
-      .s-lc-whw-ne:disabled { background-color: #efefef; }
-      .s-lc-whw { width: 100%; margin-bottom: 20px; max-width: 100%; background-color: transparent; border-bottom: none; border-left: none; border-collapse: collapse; border-spacing: 0; }
-      .s-lc-whw>tbody>tr>td { padding: 5px; }
-      .s-lc-whw>thead>tr>th { vertical-align: bottom; border-bottom: 2px solid #ddd; padding: 5px;}
-      .s-lc-whw th { border-top: none; border-bottom: none; border-right: none;}
-      .sr-only { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); border: 0; }
-      @media (max-width: 768px) {
-        .s-lc-whw-cont .table-responsive { width: 100%; margin-bottom: 15px; overflow-y: hidden; overflow-x: scroll; -ms-overflow-style: -ms-autohiding-scrollbar; border: 1px solid #ddd; -webkit-overflow-scrolling: touch; }
-        .s-lc-whw td { white-space: nowrap; }
-    }
-    </style>
     <div id="makerspace-hours" class="maker-hours__title">Fall 2022 Hours and Access</div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
     <script src="https://cal.lib.virginia.edu/js/hours_grid.js?002"></script> 
@@ -122,30 +74,31 @@ order: 3
     <!-- Below is optional button styling  //-->
   </div>
 
-  <div class="makerspace__people">
-    <div class="maker-people__title" id="tinkertank-techs">TinkerTank Techs</div>
-    <div class="maker-people__students">
-      <div class="maker-students__label">Student Technologists</div>
-      <div class="maker-students__list">
-        <span>Kavya Annapareddy:</span>Button Making, 3D Printing, Sewing, Wacom Drawing Tablet, Adobe Creative Suite<br>
-        <span>Sarah Hemler</span>3D Printing, Solidworks and AutoDesk, Electronics, Photoshop Software and Drawing Tablets, Audacity and Musescore<br>
-        <span>Yejung (Henry) Kim</span>Electronics, CAD<br>
-        <span>Alexa Luborsky:</span>Digital Humanities, Button Making, Silhouette Cameo<br>
-        <span>Leah Phan:</span>3D Printing, 3D Scanner, Silhouette Cameo, Laminator, Mini Printing Press, Adobe Creative Suite<br>
-        <span>Tingyo Tan:</span>CAD, 3D Printing, Electronics, Photogrammetry<br>
-      </div>
-      <div class="maker-students__label">Makerspace Manager &amp; Lead Research Technologist</div>
-      <div class="maker-staff__list">
-        <span>Ammon Shepherd:</span>3D Printing, Electronics, Programming, Web Development, Digital Humanities, Sewing<br>
-      </div>
-      <div class="maker-people__staff">
-        <div class="maker-staff__label">Scholars’ Lab Staff Technologists</div>
-        <div class="maker-staff__list">
-          <span>Laura Miller:</span>3D Printing, Photogrammetry, Digital Humanities<br>
-          <span>Shane Lin:</span>3D Printing, Programming, Digital Humanities<br>
-          <span>Jeremy Boggs:</span>3D Printing, Electronics, Programming, Digital Humanities
-        </div>
-      </div>
+
+  <div class="makerspace__vision">
+    <div class="maker-vision__title">Vision</div>
+    <div class="maker-vision__text">
+      <p>The Scholars&rsquo; Lab TinkerTank is strategically situated within the UVA
+        Library to be open, provide a low barrier of entry to making, and be a helpful
+        resource of information, technology and support. The space invites all
+        people, and proactively encourages those in underrepresented academic
+        studies, ethnicities, genders, economic classes and skill levels to come,
+        learn, make, and be empowered to improve their education, research, and
+        community. The TinkerTank is an active participant in academic research
+        through independent and collaborative work with scholars to explore,
+        understand, and report on emerging technologies, methodologies and
+        pedagogies in a variety of disciplines.
+      </p>
+
+    </div>
+  </div>
+
+  <div class="makerspace__mission">
+    <div class="maker-mission__title">Mission</div>
+    <div class="maker-mission__text">
+      <p>All humans are dreamers, creators, and achievers. Our mission is to
+        provide the place, the tools, and the support to empower people to dream,
+        create, and achieve.</p>
     </div>
   </div>
 
@@ -158,16 +111,16 @@ order: 3
         interrogate your assumptions? Contact us at <a
            href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>
         to schedule an appointment with a TinkerTank Technologist or
-        Scholars&#8217; Lab staff to discuss your planned project.</p>
+        Scholars&rsquo; Lab staff to discuss your planned project.</p>
 
       <h3>3D Printing</h3>
-      <p>All 3D printing is now available through the <a href="https://www.library.virginia.edu/services/3d-printing/">3D Printing Studio</a> in the Robertson Media Center (just across the room). <a href="https://www.library.virginia.edu/services/3d-printing/">Complete your online training, reserve a 3D printer</a> during their <a href="https://www.library.virginia.edu/hours">open hours</a>. Email <a href="mailto:teachlearn@virginia.edu">teachlearn@virginia.edu</a> with any questions.
+      <p>All 3D printing is now available through the <a href="https://www.library.virginia.edu/services/3d-printing/">3D Printing Studio</a> in the Robertson Media Center (just across the room). To use the printers, you need to complete an <a href="https://www.library.virginia.edu/services/3d-printing/">online training</a>, then reserve a 3D printer during their <a href="https://www.library.virginia.edu/hours">open hours</a>. Email <a href="mailto:teachlearn@virginia.edu">teachlearn@virginia.edu</a> with any questions.
     </div>
   </div>
 
 
-  <div class="makerspace__resource">
-    <div class="maker-resource__title">Resources</div>
+  <div class="makerspace__resources">
+    <div class="maker-resources__title">Resources</div>
     <h3 id="workshop-links">Workshops</h3>
     <p>Resources to teach a workshop</p>
     <ul>
@@ -189,6 +142,35 @@ order: 3
       </li>
     </ul>
   </div>
+
+    
+  <div class="makerspace__people">
+    <div class="maker-people__title" id="tinkertank-techs">TinkerTank Techs</div>
+    <div class="maker-people__students">
+      <div class="maker-students__label">Student Technologists</div>
+      <div class="maker-students__list">
+        <span>Kavya Annapareddy:</span>Button Making, 3D Printing, Sewing, Wacom Drawing Tablet, Adobe Creative Suite<br>
+        <span>Sarah Hemler</span>3D Printing, Solidworks and AutoDesk, Electronics, Photoshop Software and Drawing Tablets, Audacity and Musescore<br>
+        <span>Yejung (Henry) Kim</span>Electronics, CAD<br>
+        <span>Alexa Luborsky:</span>Digital Humanities, Button Making, Silhouette Cameo<br>
+        <span>Leah Phan:</span>3D Printing, 3D Scanner, Silhouette Cameo, Laminator, Mini Printing Press, Adobe Creative Suite<br>
+        <span>Tingyo Tan:</span>CAD, 3D Printing, Electronics, Photogrammetry<br>
+      </div>
+      <div class="maker-students__label">Makerspace Manager &amp; Lead Research Technologist</div>
+      <div class="maker-staff__list">
+        <span>Ammon Shepherd:</span>3D Printing, Electronics, Programming, Web Development, Digital Humanities, Sewing<br>
+      </div>
+      <div class="maker-people__staff">
+        <div class="maker-staff__label">Scholars&rsquo; Lab Staff Technologists</div>
+        <div class="maker-staff__list">
+          <span>Laura Miller:</span>3D Printing, Photogrammetry, Digital Humanities<br>
+          <span>Shane Lin:</span>3D Printing, Programming, Digital Humanities<br>
+          <span>Jeremy Boggs:</span>3D Printing, Electronics, Programming, Digital Humanities
+        </div>
+      </div>
+    </div>
+  </div>
+
 
   <div class="makerspace__inventory">
     <div class="maker-inventory__title">What&#8217;s in the TinkerTank?</div>
