Add Jordan Phan

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -151,10 +151,10 @@ order: 3
       <div class="maker-students__list">
         <span>Kavya Annapareddy:</span>Button Making, 3D Printing, Sewing, Wacom Drawing Tablet, Adobe Creative Suite<br>
         <span>Sarah Hemler</span>3D Printing, Solidworks and AutoDesk, Electronics, Photoshop Software and Drawing Tablets, Audacity and Musescore<br>
-        <span>Yejung (Henry) Kim</span>Electronics, CAD<br>
+        <span>Yejung Kim</span>Electronics, CAD<br>
         <span>Alexa Luborsky:</span>Digital Humanities, Button Making, Silhouette Cameo<br>
-        <span>Leah Phan:</span>3D Printing, 3D Scanner, Silhouette Cameo, Laminator, Mini Printing Press, Adobe Creative Suite<br>
         <span>Tingyo Tan:</span>CAD, 3D Printing, Electronics, Photogrammetry<br>
+        <span>Jordan Phan:</span>Sewing, textiles<br>
       </div>
       <div class="maker-students__label">Makerspace Manager &amp; Lead Research Technologist</div>
       <div class="maker-staff__list">
