Correct type of Silhouette machine

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -196,7 +196,7 @@ order: 3
       <ul class="maker-list__wearables">
         <span>Crafting</span>
         <li>Button Maker</li>
-        <li>Silhouette Curio vinyl cutter</li>
+        <li>Silhouette Cameo 4 Plus Desktop Cutting Machine</li>
         <li>Laminator</li>
       </ul>
       <!-- Textiles, Wearables - Learn how to take fashion into the future. -->
