Update open hours heading

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -33,7 +33,7 @@ order: 3
   </div>
 
   <div class="makerspace__hours">
-    <div id="makerspace-hours" class="maker-hours__title">Fall 2022 Hours and Access</div>
+    <div id="makerspace-hours" class="maker-hours__title">Open Hours and Access</div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
     <script src="https://cal.lib.virginia.edu/js/hours_grid.js?002"></script> 
     <div id="s-lc-whw15029"></div> 
