Updates CSS for DH pages; Minor typo and markup corrections.

--- a/pages/digital-humanities.html
+++ b/pages/digital-humanities.html
@@ -9,7 +9,7 @@ order: 6
 <div class="dh-landing-wrapper">
 	<div class="dh-landing-grid">
 		<div class="dh-landing__page-title" aria-label="Landing page">
-			<div class="dh-title__text">Digital Humamities</div>
+			<div class="dh-title__text">Digital Humanities</div>
 		</div>
 	</div> <!-- end landing grid -->
 </div> <!-- end landing wrapper -->
@@ -25,7 +25,7 @@ order: 6
 		</div>
 	</div>
 	<div class="dh__people">
-		<div class="dh-people__title">Research &amp; Development Team</div>
+		<div class="dh__title">Research &amp; Development Team</div>
 		<ul class="dh-people__list">
 			<!-- use Liquid here: -->
 			{% for person in site.people %}
