--- a/index.html
+++ b/index.html
@@ -62,26 +62,39 @@ title: Home
 				<div class="home-contact__newsletter">
 					<div>
 					<!-- Begin MailChimp Signup Form -->
-					<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-					<style type="text/css">
-						#mc_embed_signup{background:#fff; clear:left; width:300px;}
-					</style>
 					<div id="mc_embed_signup">
-					<form action="https://virginia.us1.list-manage.com/subscribe/post?u=3ac105f4d87dddbd34542ab41&amp;id=25120106cf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-					    <div id="mc_embed_signup_scroll">
-						<h2>Scholars' Lab Newsletter</h2>
-					<div class="mc-field-group">
-						<label for="mce-EMAIL">Email Address </label>
-						<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-					</div>
-						<div id="mce-responses" class="clear">
-							<div class="response" id="mce-error-response" style="display:none"></div>
-							<div class="response" id="mce-success-response" style="display:none"></div>
-						</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><label for="this-is-for-spam-bots">This is for spam bots</label><input type="text" id="this-is-for-spam-bots" name="b_3ac105f4d87dddbd34542ab41_25120106cf" tabindex="-1" value="" aria-hidden="true"></div>
-					    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-					    </div>
-					</form>
+						<h2>Scholars’ Lab Newsletter</h2>
+						<form action="https://virginia.us1.list-manage.com/subscribe/post" method="POST">
+							<input type="hidden" name="u" value="3ac105f4d87dddbd34542ab41">
+							<input type="hidden" name="id" value="25120106cf">
+
+								<label for="MERGE0">Email Address <span class="req asterisk">*</span></label>
+								<input type="email" autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" size="25" value="">
+
+								<label for="MERGE1">First Name</label>
+								<input type="text" name="MERGE1" id="MERGE1" size="25" value="">
+
+								<label for="MERGE2">Last Name</label>
+								<input type="text" name="MERGE2" id="MERGE2" size="25" value="">
+
+								<label for="MERGE3">UVA Dept. (if applicable)</label>
+								<input type="text" name="MERGE3" id="MERGE3" size="25" value="">
+
+								<fieldset>
+									<legend>Subscriber Type</legend>
+									<ul class="interestgroup_field checkbox-group"> <li class="!margin-bottom--lv2"> <label class="checkbox" for="group_2"><input type="checkbox" data-dojo-type="dijit/form/CheckBox" id="group_2" name="group[384098][2]" value="1"  class="av-checkbox"><span>Student</span> </label> </li><li class="!margin-bottom--lv2"> <label class="checkbox" for="group_4"><input type="checkbox" data-dojo-type="dijit/form/CheckBox" id="group_4" name="group[384098][4]" value="1"  class="av-checkbox"><span>Faculty</span> </label> </li><li class="!margin-bottom--lv2"> <label class="checkbox" for="group_8"><input type="checkbox" data-dojo-type="dijit/form/CheckBox" id="group_8" name="group[384098][8]" value="1"  class="av-checkbox"><span>Staff</span> </label> </li> </ul>
+								</fieldset>
+
+								<fieldset>
+									<legend>Preferred format</legend>
+									<input type="radio" name="EMAILTYPE" id="EMAILTYPE_HTML" value="html" checked><label for="EMAILTYPE_HTML">HTML</label>&nbsp; &nbsp;
+									<input type="radio" name="EMAILTYPE" id="EMAILTYPE_TEXT" value="text" ><label for="EMAILTYPE_TEXT">Plain-text</label>&nbsp; &nbsp;
+								</fieldset>
+
+								<input type="submit" class="button" value="Subscribe">
+							<input type="hidden" name="ht" value="8eb931ddc3b7db0d59f8d05e5d1ef264e2925f04:MTY5NDYxNDEwMy4wMDQy">
+							<input type="hidden" name="mc_signupsource" value="hosted">
+						</form>
 					</div>
 					<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 					<!--End mc_embed_signup-->
@@ -193,7 +206,7 @@ title: Home
 <p>The TinkerTank staff provides consultation and instruction whenever the <a href="https://www.library.virginia.edu/hours/">TinkerTank is open</a>, or by appointment. Please drop in, or send inquiries to <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>.</p>
 			</div>
 
-			<div class="home-maker__cta"><a href="/makerspace/">TinkerTank Home</a></div> 
+			<div class="home-maker__cta"><a href="/makerspace/">TinkerTank Home</a></div>
 		</section>
 
 		<!-- spatial tech: -->
