Update workshops and makerspace page

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -122,6 +122,8 @@ order: 3
   <div class="makerspace__resources">
     <div class="maker-resources__title">Resources</div>
     <h3 id="workshop-links">Workshops</h3>
+    <p>Sign up for our events and workshops on the <a id="equipment-btn" href="https://cal.lib.virginia.edu/calendar/events?cid=4299&t=d&d=0000-00-00&cal=4299&ct=46484&inc=0">Library Calendar</a></p>
+
     <p>Resources to teach a workshop</p>
     <ul>
       <li>
@@ -153,8 +155,10 @@ order: 3
         <span>Sarah Hemler</span>3D Printing, Solidworks and AutoDesk, Electronics, Photoshop Software and Drawing Tablets, Audacity and Musescore<br>
         <span>Yejung Kim</span>Electronics, CAD<br>
         <span>Alexa Luborsky:</span>Digital Humanities, Button Making, Silhouette Cameo<br>
-        <span>Tingyo Tan:</span>CAD, 3D Printing, Electronics, Photogrammetry<br>
         <span>Jordan Phan:</span>Sewing, textiles<br>
+        <span>Tingyo Tan:</span>CAD, 3D Printing, Electronics, Photogrammetry<br>
+        <span>Jennifer Truong:</span>Button Making, Stickers, Digital Artwork<br>
+        <span>Holly Zhou:</span>Critical Making Fellow<br>
       </div>
       <div class="maker-students__label">Makerspace Manager &amp; Lead Research Technologist</div>
       <div class="maker-staff__list">
