--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -152,13 +152,19 @@ order: 3
       <div class="maker-students__label">Student Technologists</div>
       <div class="maker-students__list">
         <span>Kavya Annapareddy:</span>Button Making, 3D Printing, Sewing, Wacom Drawing Tablet, Adobe Creative Suite<br>
-        <span>Sarah Hemler</span>3D Printing, Solidworks and AutoDesk, Electronics, Photoshop Software and Drawing Tablets, Audacity and Musescore<br>
         <span>Yejung Kim</span>Electronics, CAD<br>
         <span>Alexa Luborsky:</span>Digital Humanities, Button Making, Silhouette Cameo<br>
         <span>Jordan Phan:</span>Sewing, textiles<br>
-        <span>Tingyo Tan:</span>CAD, 3D Printing, Electronics, Photogrammetry<br>
-        <span>Jennifer Truong:</span>Button Making, Stickers, Digital Artwork<br>
-        <span>Holly Zhou:</span>Critical Making Fellow<br>
+        <span>Tingyo Tan:</span>CAD, Desktop CNC, 3D Printing, Electronics, Photogrammetry<br>
+        <span>Jennifer Truong:</span>Button Making, Stickers, Wacom Drawing Tablet, Digital Artwork<br>
+      </div>
+      <div class="maker-students__label">Critical Making Fellow</div>
+      <div class="maker-staff__list">
+        <span>Holly Zhou:</span>Programming, Poetry, Project Management<br>
+      </div>
+      <div class="maker-students__label">Makerspace Volunteers</div>
+      <div class="maker-staff__list">
+        <span>Sarah Hemler</span>3D Printing, Solidworks and AutoDesk, Electronics, Photoshop Software and Drawing Tablets, Audacity and Musescore<br>
       </div>
       <div class="maker-students__label">Makerspace Manager &amp; Lead Research Technologist</div>
       <div class="maker-staff__list">
