--- a/pages/research-and-development.html
+++ b/pages/research-and-development.html
@@ -19,9 +19,17 @@ order: 6
 		<div class="rd__title">What We Do</div>
 		<!-- insert relevant links in this text: -->
 		<div class="rd__text">
-			<p>For faculty and students interested in digitial humanities, we provide research and teaching consultation on a variety of concepts, approaches, and tools, including digital collections & exhibitions, data collection and management, machine learning, text analysis, and more. Our familiarity with a variety of technologies is broad and diverse, but our particular strengths lie in the critical pedagogical and scholarly application of those technologies for the humanities. In addition to individual consultations, we provide active support for the Scholars' Lab's graduate fellowship programs and for the University's graduate certificate in Digital Humanities.</p>
-			<p>Whether you're a student working on a digital humanities project for a class, or you're an instructor wishing to learn more about using particular DH methods or tools in course or research, we can help you find appropriate resources for your work.</p>
+			<p>For faculty and students interested in digitial humanities, we provide research and teaching consultation on a variety of concepts, approaches, and tools, including digital collections & exhibitions, data collection and management, machine learning, text analysis, and more. Our familiarity with a variety of technologies is broad and diverse, but our particular strengths lie in the critical pedagogical and scholarly application of those technologies for the humanities.</p>
 			</p>
+			<ul>
+			<li><strong>Background research, and developing a bibliography of existing DH work relevant to your particular project or research interests</strong>. It's likely the research project you're developing already has peer in the DH world, similar either in topic, discipline, or technical features and approach. The Scholars' Lab can help you review existing work to establish how your own contribution fits into that. Similar to doing a literature review for your book or dissertation, but with digital projects.</li>
+			<li><strong>Project scoping and management</strong>. We can help you take your broader ideas and help develop them into a list of concrete, actionable tasks or deliverables that you can work on. If you’re not sure how complex your project will be, we can also help you scope it out.</li>
+			<li><strong>Evaluating tools and methods relevant to your work</strong>. We have experience with a range of programming languages, markup languages, content management systems, and libraries, and can provide recommendations based on your interests and level of experience.</li>
+			<li><strong>User experience and interface design</strong>. We have experience researching and designing project interfaces that engage critically with subject matter in a variety of disciplines.</li>
+			<li><strong>Data collection, cleaning, organization, management and preservation</strong>. Whether it's arranging a corpus of texts, structuring an archive of historical primary source materials, or acquiring social media data, we can help you work with your research and teaching data.</li>
+			<li><strong>Conference and publication proposals</strong>. Our team, and other staff at the Scholars' Lab, have decades of experience publishing or sharing DH research at conferences and in academic journals. If you're interested in submitting proposals based on your DH work, we'd be glad to help review those proposals and offer suggestions.</li>
+			</ul>
+			<p>Whether you're a student working on a digital humanities project for a class, or you're faculty wishing to learn more about using particular DH methods or tools in course or research, we can help you find appropriate resources for your work.</p>
 		</div>
 	</div>
 
