Removes encoded ampersand in title.

--- a/pages/research-and-development.html
+++ b/pages/research-and-development.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Research &amp; Development"
+title: "Research and Development"
 permalink: /research-and-development/
 nav: true
 order: 6
