Change TinkerTank to Makerspace

--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@ title: Home
 
 			<div class="home-contact__wrapper">
 				<div class="home-contact__content">
-<p>The Scholars’ Lab offices and TinkerTank (formerly Makerspace) are now located on the 3rd floor of Clemons Library, in the Robertson Media Center. It will be our home away from home until the completion of the <a href="https://www.library.virginia.edu/renovation">renovation of the main library</a>, scheduled for 2023.</p>
+<p>The Scholars’ Lab offices and Makerspace (formerly TinkerTank) are now
+located on the 3rd floor of Alderman Library</p>
 <p>Curious? Please get in touch—absolutely no prior experience or fully formed ideas needed!</p>
-<p>Email us at <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> with questions, or to set up a time to meet. Drop in to the TinkerTank during <a href="https://www.library.virginia.edu/hours">open hours</a>. Sign up for our newsletter to hear about events and opportunities!</p>
+<p>Email us at <a
+    href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> with
+questions, or to set up a time to meet. Drop in to the Makerspace during <a href="https://www.library.virginia.edu/hours">open hours</a>. Sign up for our newsletter to hear about events and opportunities!</p>
 				</div>
 
 				<div class="home-contact__newsletter">
@@ -196,17 +199,18 @@ title: Home
 
 		<!-- makerspace -->
 		<section class="home__makerspace">
-			<div class="home-maker__title"><a href="/makerspace/">TinkerTank</a></div>
+			<div class="home-maker__title"><a href="/makerspace/">Makerspace</a></div>
 <!--
 			<p>We are staffed most weekdays during the semester and summer sessions. We are closed for University holidays. See <a href="https://scholarslab.lib.virginia.edu/makerspace/#calendar-link">our full hours calendar</a> for actual hours on any given day.</p>
 -->
 
 			<div class="home-maker__text">
-<p><strong>The Scholars’ Lab TinkerTank</strong> (formerly Makerspace) is a place for tinkering and experimentation with technologies like wearable circuitry and virtual reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.</p>
-<p>The TinkerTank staff provides consultation and instruction whenever the <a href="https://www.library.virginia.edu/hours/">TinkerTank is open</a>, or by appointment. Please drop in, or send inquiries to <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>.</p>
+<p><strong>The Scholars’ Lab Makerspace</strong> (formerly TinkerTank) is a place for tinkering and experimentation with technologies like wearable circuitry and virtual reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.</p>
+<p>The Makerspace staff provides consultation and instruction whenever the <a
+    href="https://www.library.virginia.edu/hours/">Makerspace is open</a>, or by appointment. Please drop in, or send inquiries to <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>.</p>
 			</div>
 
-			<div class="home-maker__cta"><a href="/makerspace/">TinkerTank Home</a></div>
+			<div class="home-maker__cta"><a href="/makerspace/">Makerspace Home</a></div>
 		</section>
 
 		<!-- spatial tech: -->
