Update 3D printers and Laser cutter policy

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -90,7 +90,7 @@ order: 3
   <div class="makerspace__vision">
     <div class="maker-vision__title">Vision</div>
     <div class="maker-vision__text">
-      <p>The Scholars&rsquo; Lab Makerspaceis strategically situated within the UVA
+      <p>The Scholars&rsquo; Lab Makerspace is strategically situated within the UVA
         Library to be open, provide a low barrier of entry to making, and be a helpful
         resource of information, technology and support. The space invites all
         people, and proactively encourages those in underrepresented academic
@@ -141,12 +141,15 @@ order: 3
       <p>We have two Bernina 350 Series sewing machines and a Juki MO-644D serger available for reservation or walk-in use.</p>
 
       <h3>3D Printing</h3>
-      <p>We have four <a href="https://en.wikipedia.org/wiki/Fused_filament_fabrication">FFF</a> style printers and one <a href="https://en.wikipedia.org/wiki/Stereolithography">SLA</a> printer available for reservation. To use the printers, you can come in during open hours for in-person training and on-the-spot reservation. After the in-person training, you will need to complete an on-line training to be able to reserve the printers in the future. Alternatively, you can take the online training HERE, then reserve the printer for use during our open hours. When you come for your reservation, you'll receive the in-person training.</p>
+      <p>We have four <a href="https://en.wikipedia.org/wiki/Fused_filament_fabrication">FFF</a> style printers and one <a href="https://en.wikipedia.org/wiki/Stereolithography">Resin (SLA)</a> printer available for reservation. To use the printers, you can come in during open hours for in-person training and on-the-spot reservation. In order to reserve printers for future use, you will need to complete an on-line certification. The on-line certification is forthcoming, so the only way to use the 3D printers for now is to come in during open hours and speak with a Technologist to reserve a printer after in-person training.</p>
       
-      <p>3D printing is still available through the <a href="https://www.library.virginia.edu/services/3d-printing/">3D Printing Studio</a> in the Robertson Media Center in Clemons Library. To use the printers there, you need to complete an <a href="https://www.library.virginia.edu/services/3d-printing/">online training</a>, then reserve a 3D printer during their <a href="https://www.library.virginia.edu/hours">open hours</a>. Email <a href="mailto:teachlearn@virginia.edu">teachlearn@virginia.edu</a> with any questions.
+      <p>3D printing is still available through the <a href="https://www.library.virginia.edu/services/3d-printing/">3D Printing Studio</a> in the Robertson Media Center in Clemons Library. To use the printers there, you need to complete an <a href="https://www.library.virginia.edu/services/3d-printing/">online training</a>, then reserve a 3D printer during their <a href="https://www.library.virginia.edu/hours">open hours</a>. Email <a href="mailto:teachlearn@virginia.edu">teachlearn@virginia.edu</a> with any questions. </p>
+      
+      <p>The 3D printers are completely different from each other in each space, so training on 3D Printing Studio printers does not automatically grant access to the Makerspace printers, although the on-line training is similar.</p>
 
       <h3>Laser Cutting</h3>
-      <p>We have a Universal VLS 6.75 laser cutter available for reservation. To use the laser cutter, you must <a href="https://youtu.be/2fp6pSZoJ9Q?feature=shared&t=85">watch this video</a> to learn the process of using the laser cutter. (We use the same laser cutter as the A School Fablab.) After watching the video, you will receive an in-person training before you can reserve and use the laser cutter.</p>
+      <p>Our laser cutter is not yet available. We'll update this page as soon as installation and training process is complete.</p>
+      <!-- <p>We have a Universal VLS 6.75 laser cutter available for reservation. To use the laser cutter, you must <a href="https://youtu.be/2fp6pSZoJ9Q?feature=shared&t=85">watch this video</a> to learn the process of using a laser cutter. (We use the same laser cutter as the A School Fablab, but watching the) After watching the video, you will receive an in-person training before you can reserve and use the laser cutter.</p> -->
     </div>
   </div>
 
