--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -34,7 +34,7 @@ order: 3
           href="https://scholarslab.lib.virginia.edu/events/">events page</a> 
       for upcoming workshops and events!</p>
       <p><img
-      src="/assets/img/makerspace/3rd-floor.svg"
+      src="/assets/img/makerspace/3rd-floor.png"
       alt="The Makerspace is located on the 3rd floor, East Wing, in the South
       end of the wing." >
       <h2>Newsletter!</h2>
