Removes the contractions in hero text.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ title: Home
 <!-- {% include snowday.html %} -->
 		<div class="home-landing__hero-text">
 			<div class="home-hero__description">
-				<p>We're <a href="http://library.virginia.edu">the UVA Library</a>'s community lab for the practice of experimental scholarship in <a href="http://scholarslab.org/about/#what-academic-fields-do-you-support">all fields</a>, informed by digital humanities, spatial technologies, & cultural heritage thinking.</p>
+				<p>We are <a href="http://library.virginia.edu">the UVA Library</a>'s community lab for the practice of experimental scholarship in <a href="http://scholarslab.org/about/#what-academic-fields-do-you-support">all fields</a>, informed by digital humanities, spatial technologies, & cultural heritage thinking.</p>
 				<p>We offer mentoring, collaboration, & a safe space for anyone curious about learning to push disciplinary & methodological boundaries through new approaches.</p>
-				<p>We're foremost a space for learning together—about anything—by trying stuff. Think of us as friends and colleagues who can help you teach yourself new ways of approaching your interests. We'd love you to be part of our community!</p>
+				<p>We are foremost a space for learning together—about anything—by trying stuff. Think of us as friends and colleagues who can help you teach yourself new ways of approaching your interests. We'd love you to be part of our community!</p>
 			</div>
 		</div>
 	</header>
