--- a/pages/research-and-development.html
+++ b/pages/research-and-development.html
@@ -19,7 +19,7 @@ order: 6
 		<div class="rd__title">What We Do</div>
 		<!-- insert relevant links in this text: -->
 		<div class="rd__text">
-			<p>For faculty and students interested in digitial humanities, we provide research and teaching consultation on a variety of concepts, approaches, and tools, including digital collections & exhibitions, data collection and management, machine learning, text analysis, and more. Our familiarity with a variety of technologies is broad and diverse, but our particular strengths lie in the critical pedagogical and scholarly application of those technologies for the humanities.</p>
+			<p>For faculty and students interested in digitial humanities, we provide research and teaching consultation on a variety of concepts, approaches, and tools, including digital collections & exhibitions, data collection and management, machine learning, text analysis, and more. We have a broad familiarity with a diverse variety of technologies, but our particular strengths lie in the critical pedagogical and scholarly application of those technologies for the humanities.</p>
 			</p>
 			<ul>
 			<li><strong>Background research, and developing a bibliography of existing DH work relevant to your particular project or research interests</strong>. It's likely the research project you're developing already has peer in the DH world, similar either in topic, discipline, or technical features and approach. The Scholars' Lab can help you review existing work to establish how your own contribution fits into that. Similar to doing a literature review for your book or dissertation, but with digital projects.</li>
