webhooks nudge again

--- a/pages/research-and-development.html
+++ b/pages/research-and-development.html
@@ -34,7 +34,7 @@ order: 6
 	</div>
 
 	<div class="rd__work">
-		<div class="rd__title">Example Work & Resources</div>
+		<div class="rd__title">Example Work and Resources</div>
 		<div class="rd__text">
 			<p>Our <a href="/work/">Work</a> page lists all the projects Scholars' Lab staff have supported over the years. Here are a few examples:</p>
 			<ul>
