Updated for Shannon renaming!

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ title: Home
 			<div class="home-contact__wrapper">
 				<div class="home-contact__content">
 <p>The Scholars’ Lab offices and Makerspace (formerly TinkerTank) are now
-located on the 3rd floor of Alderman Library</p>
+located on the 3rd floor of Edgar Shannon Library (formerly Alderman).</p>
 <p>Curious? Please get in touch—absolutely no prior experience or fully formed ideas needed!</p>
 <p>Email us at <a
     href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> with
