--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -29,8 +29,8 @@ order: 3
     <div class="banner" style="border: 5px solid #00FFFF; padding: 20px;">
       <h2>New Location!</h2>
       <p>The Scholars&rsquo; Lab and the Makerspace (formerly TinkerTank) have
-      moved back to Alderman Library, 3rd Floor.</p>
-      <p>We will officially open January 16th. Look to our <a
+      moved back to the Edgar Shannon Library (formerly Alderman), 3rd Floor.</p>
+      <p>Look to our <a
           href="https://scholarslab.lib.virginia.edu/events/">events page</a> 
       for upcoming workshops and events!</p>
       <p><img
