--- a/pages/hours-and-spaces.html
+++ b/pages/hours-and-spaces.html
@@ -22,7 +22,7 @@ nav: false
 			<p class="home-hours__cta"><a href="/hours-and-spaces/" aria-label="hours and spaces page">All hours &amp; spaces</a></p>
 
 {% markdown %}
-The Common Room of the Scholars' Lab is open [whenever Alderman is](https://www.library.virginia.edu/hours), and during the semester our central [Makerspace](/makerspace/) is staffed from **1:00 pm - 7:00 pm, Monday through Thursday and 1:00 pm - 5:00 pm, Friday**. Visit the Common Room, Seminar Room (Alderman 423), and Classroom (Alderman 421)! Scholars' Lab [staff](/people/) offices are nearby, where [our grad fellows](/for-students/) also have access to a workspace and office.
+The Common Room of the Scholars' Lab is open [whenever the building is](https://www.library.virginia.edu/hours), and during the semester our [Makerspace](/makerspace/) is open regular hours (please see [the makerspace page](https://scholarslab.lib.virginia.edu/makerspace/) for the latest schedule). Scholars' Lab [staff](/people/) offices are nearby, where [our grad fellows](/for-students/) also have access to a workspace and office.
 
 {% assign spaces = site.spaces | sort: 'order' %}
 {% for space in spaces %}
