--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -186,10 +186,14 @@ order: 3
     <div class="maker-people__students">
       <div class="maker-students__label">Student Technologists</div>
       <div class="maker-students__list">
+        <span>Kroesna Chour</span>3D Printing, Button Making, Stickers, Origami<br>
+        <span>Link Fu:</span>Button Making, Stickers, Textiles, Crafting, Cosplay<br>
         <span>Yejung Kim</span>Electronics, CAD<br>
+        <span>Megan Masri:</span>Button Making, Stickers<br>
         <span>Jordan Phan:</span>Sewing, Textiles<br>
         <span>Tingyo Tan:</span>CAD, Desktop CNC, 3D Printing, Electronics, Photogrammetry<br>
         <span>Jennifer Truong:</span>Button Making, Stickers, Wacom Drawing Tablet, Digital Artwork<br>
+        <span>Hans Yang:</span>3D printing<br>
       </div>
       <div class="maker-students__label">Critical Making Fellow</div>
       <div class="maker-staff__list">
@@ -197,9 +201,9 @@ order: 3
       </div>
       <div class="maker-students__label">Makerspace Volunteers</div>
       <div class="maker-staff__list">
-        <span>Sarah Hemler</span>3D Printing, Solidworks and AutoDesk, Electronics, Photoshop Software and Drawing Tablets, Audacity and Musescore<br>
         <span>Qianqian Shao</span>Fabrics, Textiles, Sewing<br>
         <span>Brooke Carmody</span>Textiles, Wearables, Soldering, Desktop CNC<br>
+        <span>Sarah Hemler</span>3D Printing, Solidworks and AutoDesk, Electronics, Photoshop Software and Drawing Tablets, Audacity and Musescore<br>
       </div>
       <div class="maker-students__label">Makerspace Manager &amp; Lead Research Technologist</div>
       <div class="maker-staff__list">
