--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -188,7 +188,7 @@ order: 3
       <div class="maker-students__list">
         <span>Kroesna Chour</span>3D Printing, Button Making, Stickers, Origami<br>
         <span>Link Fu:</span>Button Making, Stickers, Textiles, Crafting, Cosplay<br>
-        <span>Yejung Kim</span>Electronics, CAD<br>
+        <span>Yejun Kim</span>Electronics, CAD<br>
         <span>Megan Masri:</span>Button Making, Stickers<br>
         <span>Jordan Phan:</span>Sewing, Textiles<br>
         <span>Tingyo Tan:</span>CAD, Desktop CNC, 3D Printing, Electronics, Photogrammetry<br>
