--- a/index.html
+++ b/index.html
@@ -3,224 +3,103 @@ layout: default
 title: Home
 ---
 
-<article class="home-wrapper">
-	<header class="home-landing-wrapper">
-<!-- {% include snowday.html %} -->
-		<div class="home-landing__hero-text">
-			<div class="home-hero__description">
-				<p>We are <a href="http://library.virginia.edu">the UVA Library</a>'s community lab for the practice of experimental scholarship in <a href="http://scholarslab.org/about/#what-academic-fields-do-you-support">all fields</a>, informed by digital humanities, spatial technologies, & cultural heritage thinking.</p>
-				<p>We offer mentoring, collaboration, & a safe space for anyone curious about learning to push disciplinary & methodological boundaries through new approaches.</p>
-				<p>We are foremost a space for learning together—about anything—by trying stuff. Think of us as friends and colleagues who can help you teach yourself new ways of approaching your interests. We'd love you to be part of our community!</p>
-			</div>
-		</div>
-	</header>
-
-	<main class="home-main-content">
-
-		<!-- section 1: -->
-
-		<!-- faq: -->
-<section class="home__faq">
-<div class="home-faq__title"><a href="/about">Frequently Asked Questions</a></div>
-<div class="home-faq__subtitle">Check out <a href="/about/">answers to common questions</a> including:</div>
-
-<ul class="home-faq__questions">
-<li><a href="/about/#what-is-the-scholars-lab">What is the Scholars' Lab?</a></li>
-<li><a href="/about/#how-does-the-lab-fit-into-the-uva-library">How do you fit into the UVA Library?</a></li>
-<li><a href="/about/#how-can-the-scholars-lab-fit-into-my-work-what-do-you-do">What does Scholars' Lab do? How can you fit into my work?</a></li>
-<li><a href="about/#can-you-build-me-a-thing">Can you build me a thing?</a></li>
-<li><a href="about/#can-we-collaborate">Can we collaborate on something?</a></li>
-
-<li><a href="/about/#where-are-you">Where are you?</a></li>
-<li><a href="about/#how-do-i-contact-you">How do I contact you?</a></li>
-</ul>
-
-<div class="home-faq__cta"><!--Find answers to these questions and more:<br/--><a href="/about/">About Scholars' Lab</a></div>
+<section id="recent-activity" class="feature">
+    <div id="upcoming-events">
+        <h2>Upcoming Events</h2>
+        <ul>
+        <li>DH Fellow Presentation: "Building Back The Blacktop: Digital Humanities, Historic Preservation, and Activating the Archive" (Thursday, May 9, 2024)</li>
+        <li>Mother's Day (Monday, May 6, 2024)</li>
+        <li>Praxis Program 2023-2024: Year In Review (Monday, May 6, 2024)</li>
+    </ul>
+    </div>
+    <div id="recent-posts">
+        <h2>Recent Blog Posts</h2>
+        <ul>
+            <li>Lorem Ipsum Dolor Sit Amet</li>
+            <li>Philosophi autem in suis lectulis plerumque moriuntur.</li>
+            <li>Hoc non est positum in nostra actione.</li>
+            <li>Nummus in Croesi divitiis obscuratur, pars est tamen divitiarum.</li>
+        </ul>
+    </div>
 </section>
 
-		<!-- library: -->
-		<section class="home__library">
-			<div class="home-lib__title"><a href="/library/">The Library's Lab</a></div>
-			<div class="home-lib__content">
-				<p>We're part of the Library's mission to provide equitable access to learning to everyone, and we're proud that librarian superpowers are part of our toolkit!</p>
-				<!-- **ACCESSIBILITY NOTE:** changing link wording to be more descriptive -->
-				<p>Visit our <a href="/library">Library collaborations hub</a> to find out about the many ways we co-create with and depend on our amazing Library colleagues, or jump to the <a href="http://library.virginia.edu">UVA Library's main website</a>.</p>
-			</div>
-		</section>
+<section id="newsletter">
+    <p>Learn about events, news, and more in our newsletter!</p>
+</section>
 
-		<!-- contact us: -->
-		<section class="home__contact">
-			<div class="home-contact__title">Contact Us</div>
+<section id="about-us" class="feature">
+    <div>
+    <h2>About Us</h2>
+    <p>The Scholars’ Lab, part of the UVA Library’s DH Center, is an
+    interdisciplinary lab for the critical exploration of technology and its
+    interventions on research, scholarship, and pedagogy. Our staff are informed
+    by digital humanities, computer and information science, spatial
+    technologies, maker, and cultural heritage approaches. While much of our
+    work focuses on humanistic questions, we are open to all and welcome
+    collaborations from across campus</p>
+    </div>
+    <figure>
+        <img src="" alt="">
+        <figcaption>
 
-			<div class="home-contact__wrapper">
-				<div class="home-contact__content">
-<p>The Scholars’ Lab offices and Makerspace (formerly TinkerTank) are now
-located on the 3rd floor of Edgar Shannon Library (formerly Alderman).</p>
-<p>Curious? Please get in touch—absolutely no prior experience or fully formed ideas needed!</p>
-<p>Email us at <a
-    href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> with
-questions, or to set up a time to meet. Drop in to the Makerspace during <a href="https://www.library.virginia.edu/hours">open hours</a>. Sign up for our newsletter to hear about events and opportunities!</p>
-				</div>
+        </figcaption>
+    </figure>
+</section>
+<section id="our-spaces" class="feature">
+    <div>
+        <h2>Our Spaces</h2>
+        <p>The Lab includes co-working areas, an event space, a VR immersion space, and data processing workstations. It is open whenever Shannon Library is open, but appointments are encouraged if you want to meet a particular staff member or ensure access to specific equipment.</p>
+        <p>The Makerspace is a place for tinkering and experimentation with technologies like circuitry, 3D printing, and laser cutting. Open to everyone, we specialize in applications and research questions in the humanities and arts.</p>
+    </div>
+    <figure>
+        <img src="/assets/img/makerspace/printmaking1.jpg" alt="">
+        <figcaption>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </figcaption>
+    </figure>
+</section>
 
-				<div class="home-contact__newsletter">
-					<div>
-					<!-- Begin MailChimp Signup Form -->
-					<div id="mc_embed_signup">
-						<h2>Scholars’ Lab Newsletter</h2>
-						<form action="https://virginia.us1.list-manage.com/subscribe/post" method="POST">
-							<input type="hidden" name="u" value="3ac105f4d87dddbd34542ab41">
-							<input type="hidden" name="id" value="25120106cf">
-
-								<label for="MERGE0">Email Address <span class="req asterisk">*</span></label>
-								<input type="email" autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" size="25" value="">
-
-								<label for="MERGE1">First Name</label>
-								<input type="text" name="MERGE1" id="MERGE1" size="25" value="">
-
-								<label for="MERGE2">Last Name</label>
-								<input type="text" name="MERGE2" id="MERGE2" size="25" value="">
-
-								<label for="MERGE3">UVA Dept. (if applicable)</label>
-								<input type="text" name="MERGE3" id="MERGE3" size="25" value="">
-
-								<fieldset>
-									<legend>Subscriber Type</legend>
-									<ul class="interestgroup_field checkbox-group"> <li class="!margin-bottom--lv2"> <label class="checkbox" for="group_2"><input type="checkbox" data-dojo-type="dijit/form/CheckBox" id="group_2" name="group[384098][2]" value="1"  class="av-checkbox"><span>Student</span> </label> </li><li class="!margin-bottom--lv2"> <label class="checkbox" for="group_4"><input type="checkbox" data-dojo-type="dijit/form/CheckBox" id="group_4" name="group[384098][4]" value="1"  class="av-checkbox"><span>Faculty</span> </label> </li><li class="!margin-bottom--lv2"> <label class="checkbox" for="group_8"><input type="checkbox" data-dojo-type="dijit/form/CheckBox" id="group_8" name="group[384098][8]" value="1"  class="av-checkbox"><span>Staff</span> </label> </li> </ul>
-								</fieldset>
-
-								<fieldset>
-									<legend>Preferred format</legend>
-									<input type="radio" name="EMAILTYPE" id="EMAILTYPE_HTML" value="html" checked><label for="EMAILTYPE_HTML">HTML</label>&nbsp; &nbsp;
-									<input type="radio" name="EMAILTYPE" id="EMAILTYPE_TEXT" value="text" ><label for="EMAILTYPE_TEXT">Plain-text</label>&nbsp; &nbsp;
-								</fieldset>
-
-								<input type="submit" class="button" value="Subscribe">
-							<input type="hidden" name="ht" value="8eb931ddc3b7db0d59f8d05e5d1ef264e2925f04:MTY5NDYxNDEwMy4wMDQy">
-							<input type="hidden" name="mc_signupsource" value="hosted">
-						</form>
-					</div>
-					<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-					<!--End mc_embed_signup-->
-					</div> <!-- end signup wrapper -->
-				</div> <!-- end newsletter -->
-			</div> <!-- end contact content -->
-		</section> <!-- end contact -->
-
-		<!-- section 2: -->
-
-		<!-- find us: -->
-		<section class="home__find-us">
-			<div class="home-find__title"><a href="/hours-and-spaces">What We Do</a></div>
-			<p>Our staff has particular strengths in:</p>
-			<ul>
-				<li>digital humanities </li>
-				<li>web design/development instruction </li>
-				<li>collaborative project management</li>
-				<li>digital pedagogy</li>
-				<li>GIS/mapping & analysis</li>
-				<li>cultural heritage informatics</li>
-				<li>3D laser scanning & photogrammetry</li>
-				<li>3D printing, making, & electronics </li>
-				<li>and virtual/augmented reality. </li>
-			</ul>
-			<div class="home-find__content">
-
-				{% comment %}
-				<div class="home-find__diagram">
-					<img src="{{ 'assets/img/svg/alderman-floorplan.svg' | relative_url }}" height="400px" alt="Floor diagram of Scholars' Lab spaces" title="Alderman Floorplan - Floor 4">
-					{% include floorplan-markup.html %}
-				</div>
-				<ul><!-- commenting out b/c messing w/ JS stuff rn! span>Spaces:</span-->
-					{% assign spaces = site.spaces | sort: 'order' %}
-					{% for space in spaces %}
-					<li data-fill="{{ space.fill-color }}" data-name="{{ space.data-name }}"><span>{{ space.title }}</span>:<br/> {{ space.room }}</li>
-					{% endfor %}
-					<li data-fill="violet" data-name="office-hrs"><span>Open Office Hours</span></li>
-					<li data-fill="teal" data-name="offices"><span>Staff offices</span></li>
-				</ul>
-				{% endcomment %}
-			</div>
-			<p class="home-hours__cta"><a href="/work" aria-label="hours and spaces page">Our Work</a></p>
-		</section>
-
-		<!-- events: -->
-		<section class="home__events">
-			<div class="home-events__title"><a href="/events">Events</a></div>
-<p>We host a wide array of public events and speakers. We teach workshops on tools and methods that enhance your courses and research. Visit <a href="https://scholarslab.lib.virginia.edu/events">our Events Page</a> to see our complete calendar of virtual and in-person programming.</p>
-
-            {% assign events = "" | split: "" %}
-            {% assign allevents = site.events | sort: 'start_date' %}
-            {% assign today = site.time | date: '%Y%m%d' | plus:0 %}
-            {% for event in allevents %}
-                {% assign eventdate = event.start_date | date: '%Y%m%d' | plus:0 %}
-                {% if eventdate >= today %}
-                    {% assign events = events | push: event %}
-                {% endif %}
-            {% endfor %}
-			<!-- event layout: -->
-			<div class="home-events__upcoming">
-				{% for event in events limit: 3 %}
-				<div>
-					<h2>{{ event.title }}</h2>
-					<ul>
-						<li><span>When:</span> {{ event.start_date | date: "%A, %m/%-d/%Y" }}</li>
-						<li><span>Where:</span> {{ event.location }}</li>
-					</ul>
-					<div class="events-item__cta">
-						<a href="/events/{{ event.slug }}/">Details &rsaquo;</a>
-					</div>
-				</div>
-				{% endfor %}
-<!-- open office hours: -->
-
-{% comment %}
-{% include open-office-hours.html %}
-{% endcomment %}
-			<div class="home-events__cta"><a href="/events">All events</a></div>
-		</section>
-
-		<!-- section 3: -->
-
-		<!-- student opportunities: -->
-		<section class="home__student-opps">
-			<div class="home-student__content">
-				<div class="home-student__title"><a href="/for-students/">For Students</a></div>
-				<div class="home-student__text">
-					<p>One of our primary missions is supporting the work of emerging scholars and practitioners&mdash;particularly UVa graduate students and folks interested in digital humanities and spatial technologies.</p>
-					<p>We offer a variety of <a href="/for-students/">fellowships and opportunities</a> to this end, which collectively aim to support graduate students during the full measure of their time at UVA.</p>
-					<p>From the innovative <a href="http://praxis.scholarslab.org/">Praxis Program</a> to professionalization training for students on the DH job market, we're here to help whether you're looking to answer a specific call for applications or simply looking to discuss your research.</p>
-				</div>
-
-				<div class="home-student__cta"><a href="/for-students/">See all</a></div>
-
-			</div>
-			<div class="home-student__img-container" title="Placeholder image"><img src="{{ 'assets/img/decorative/for-students.jpg' | relative_url }}" id="for-students-image"></div>
-		</section>
-
-		<!-- makerspace -->
-		<section class="home__makerspace">
-			<div class="home-maker__title"><a href="/makerspace/">Makerspace</a></div>
-<!--
-			<p>We are staffed most weekdays during the semester and summer sessions. We are closed for University holidays. See <a href="https://scholarslab.lib.virginia.edu/makerspace/#calendar-link">our full hours calendar</a> for actual hours on any given day.</p>
--->
-
-			<div class="home-maker__text">
-<p><strong>The Scholars’ Lab Makerspace</strong> (formerly TinkerTank) is a place for tinkering and experimentation with technologies like wearable circuitry and virtual reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.</p>
-<p>The Makerspace staff provides consultation and instruction whenever the <a
-    href="https://www.library.virginia.edu/hours/">Makerspace is open</a>, or by appointment. Please drop in, or send inquiries to <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>.</p>
-			</div>
-
-			<div class="home-maker__cta"><a href="/makerspace/">Makerspace Home</a></div>
-		</section>
-
-		<!-- spatial tech: -->
-		<section class="home__spatial-tech">
-			<div class="home-spatial__title"><a href="/spatial-technologies/">Spatial Technologies</a></div>
-			<div class="home-spatial__text">
-				<p><strong>Experts at thinking about space + time.</strong></p>
-				<p>We've got experts in GIS, cultural heritage informatics, augmented reality, virtual reality, 3D modeling, photogrammetry and scanning, aerial footage, and other spatial approaches (including our own <a href="http://neatline.org/">Neatline</a> project for telling stories that combine timelines and maps).</p>
-			</div>
-			<div class="home-spatial__cta"><a href="/spatial-technologies/">Spatial Tech Home</a></div>
-		</section> <!-- end sections -->
-	</main> <!-- end main content -->
-</article> <!-- end wrapper -->
+<section class="feature">
+    <div>
+        <h2>Lorem Ipsum Dolor</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quasi, minima, laboriosam exercitationem officia corporis itaque molestias adipisci assumenda cupiditate alias rem blanditiis modi odio repellat ullam voluptate eius deleniti!</p>
+    </div>
+    <figure>
+        <img src="" alt="">
+            <figcaption></figcaption>
+        </img>
+    </figure>
+</section>
+<section class="feature">
+    <div>
+        <h2>Lorem Ipsum Dolor</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quasi, minima, laboriosam exercitationem officia corporis itaque molestias adipisci assumenda cupiditate alias rem blanditiis modi odio repellat ullam voluptate eius deleniti!</p>
+    </div>
+    <figure>
+        <img src="" alt="">
+            <figcaption></figcaption>
+        </img>
+    </figure>
+</section>
+<section class="feature">
+    <div>
+        <h2>Lorem Ipsum Dolor</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quasi, minima, laboriosam exercitationem officia corporis itaque molestias adipisci assumenda cupiditate alias rem blanditiis modi odio repellat ullam voluptate eius deleniti!</p>
+    </div>
+    <figure>
+        <img src="" alt="">
+            <figcaption></figcaption>
+        </img>
+    </figure>
+</section>
+<section class="feature">
+    <div>
+        <h2>Lorem Ipsum Dolor</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quasi, minima, laboriosam exercitationem officia corporis itaque molestias adipisci assumenda cupiditate alias rem blanditiis modi odio repellat ullam voluptate eius deleniti!</p>
+    </div>
+    <figure>
+        <img src="" alt="">
+            <figcaption></figcaption>
+        </img>
+    </figure>
+</section>
